@@ -5,6 +5,7 @@
 --- Added support to parse out weaknesses.
 --- Added support to parse out damage reduction.
 --- Added support to parse out spell resistance.
+--- Improved weapon damage type parsing.
 
 0.3.8:
 - Marked compatibility with FoundryVTT v0.6.6.
